# DevPilot-

./: README.md  START_DEV_PILOT.bat  START_DEV_PILOT.ps1  requirements-dev.txt  run.py  serve.py
devpilot_project/: RUN_THIS_FIRST.txt  pyproject.toml  requirements.txt
devpilot_project/dashboard/: api.py  app.py  serializers.py
devpilot_project/docs/: roadmap.md
devpilot_project/reports/: devpilot_report.json  devpilot_report.md
devpilot_project/src/devpilot/: analyzer.py  code_quality.py  dependency_checker.py  main.py  readme_checker.py  scanner.py  timing.py  utils.py
devpilot_project/static/css/: style.css
devpilot_project/static/js/: app.js
devpilot_project/tests/: test_analyzer.py  test_dependency_checker.py  test_multilanguage.py  test_utils.py
docs/: screenshots.md
reports/: devpilot_report.html
src/devpilot/: __init__.py  language_support.py  models.py  report_generator.py  score_engine.py  security_checker.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_code_quality.py  test_language_support.py  test_main.py  test_readme_checker.py  test_report_generator.py  test_scanner.py  test_score_engine.py  test_security_checker.py  test_timing_and_scope.py  test_web_api.py
